# studyflow-modeler

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  UBIQUITOUS_LANGUAGE.md  docusaurus.config.ts  eslint.config.js  index.html  package-lock.json  package.json  pixi.toml  playwright.config.ts  prd.md  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
.claude/: settings.local.json
about/: about.mdx  index.html  index.jsx  styles.scss
app/: App.jsx  Modeler.jsx  StartUpModal.jsx  app.html  contexts.js  i18n.js  index.css  index.html  index.scss
docs/: .gitignore  0-introduction.qmd  1-getting-started.qmd  1_introduction.md  1_introduction.qmd  2-language.qmd  2_related_works.md  2_related_works.qmd  3-modeler.qmd  3_overview.md  3_overview.qmd  4-elements.qmd  4_use_case.md  4_use_case.qmd  5-views.qmd  5_conclusion.md  5_conclusion.qmd  6-changelog.qmd  README.md  _brand.yml  _quarto-ci.yml  _quarto.yml  architecture.md  background.md  changelog.qmd  docusaurus.config.ts  faq.qmd  get-started.qmd  getting-started.qmd  index.qmd  introduction.md  modeler.qmd  package-lock.json  package.json  roadmap.qmd  studyflow.qmd
modeler/: App.jsx  BFlowModeler.jsx  StudyFlowContext.jsx  StudyFlowModeler.jsx  index.css  index.html
public/: homepage.css  styles.css
src/: App.jsx  App.tsx  BFlowModeler.jsx  _app.tsx  app.html  app.tsx  declarations.d.ts  i18n.ts  icons.ts  index.html  run.html  styles.css
tests/: _figs_harness.spec.ts  auto-layout.unit.spec.ts  bindings.unit.spec.ts  catalog.unit.spec.ts  choreography-root.unit.spec.ts  (+27 more)
(+1120 files in other folders)
